URL correction for .app and horizontal scroll

--- a/themes/primary-theme/assets/sass/main.scss
+++ b/themes/primary-theme/assets/sass/main.scss
@@ -27,7 +27,7 @@ body {
   font-size: 16px;
   font-family: $font-content;
   font-weight: $font-size-medium;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 .header {
